Add email functionality with SMTP support
- Install nodemailer package
- Add SMTP configuration with environment variables
- Implement password reset email functionality
- Add HTML email templates
- Create test email endpoint (/test-email)
- Fix pagination visibility on landing page
- Normalize city names to prevent duplicates in dropdown
- Add EMAIL_SETUP.md documentation
- Update .gitignore to include EMAIL_SETUP.md

--- a/locales/de.json
+++ b/locales/de.json
@@ -20,7 +20,8 @@
         "all": "Alle",
         "button": "Suchen",
         "noResults": "Keine Ärzte gefunden",
-        "toProfile": "Zum Profil"
+        "toProfile": "Zum Profil",
+        "moreResults": "weitere Ärzte gefunden. Bitte verfeinern Sie Ihre Suche."
     },
     "doctor": {
         "profile": "Arztprofil",
@@ -113,6 +114,7 @@
         "title": "Anrede",
         "name": "Name",
         "specialty": "Fachgebiet",
-        "details": "Details"
+        "details": "Details",
+        "notSpecified": "Nicht angegeben"
     }
 } 
