--- a/locales/tr.json
+++ b/locales/tr.json
@@ -8,7 +8,8 @@
         "title": "Unvan",
         "name": "İsim",
         "specialty": "Uzmanlık",
-        "details": "Detaylar"
+        "details": "Detaylar",
+        "notSpecified": "Belirtilmemiş"
     },
     "hero": {
         "title": "Size uygun doktoru bulun",
@@ -26,7 +27,8 @@
         "all": "Tümü",
         "button": "Ara",
         "noResults": "Doktor bulunamadı",
-        "toProfile": "Profile Git"
+        "toProfile": "Profile Git",
+        "moreResults": "daha fazla doktor bulundu. Lütfen aramanızı daraltın."
     },
     "doctor": {
         "profile": "Doktor Profili",
@@ -37,80 +39,86 @@
         "website": "Web sitesi",
         "insurance": "Anlaşmalı Kurumlar",
         "privateOnly": "Sadece özel muayene",
-        "additionalInfo": "Ek Bilgiler"
+        "additionalInfo": "Ek Bilgiler",
+        "location": "Konum",
+        "clickMapForDirections": "Yol tarifi için haritaya tıklayın",
+        "gallery": "Ordination Fotoğrafları",
+        "noAddress": "Adres bilgisi mevcut değil",
+        "addressNotFound": "Adres haritada bulunamadı",
+        "routePlanning": "Yol tarifi başlat"
     },
     "specialties": {
         "male": {
-            "Acil": "Acil Tıp",
-            "AdliTip": "Adli Tıp",
-            "AgizDis": "Ağız, Diş ve Çene Cerrahisi",
-            "AileHekimligi": "Aile Hekimliği",
-            "AnesteziyolojiReanimasyon": "Anesteziyoloji ve Reanimasyon",
-            "Dermatoloji": "Dermatoloji ve Zührevi Hastalıklar",
-            "DisHekimligi": "Diş Hekimliği",
-            "EndokrinolojiveDiyabet": "Endokrinoloji, Diyabet ve Metabolizma Hastalıkları",
-            "EnfeksiyonHastaliklari": "Enfeksiyon Hastalıkları",
-            "FizikselTipRehabilitasyon": "Fiziksel Tıp ve Rehabilitasyon",
-            "GastroenterolojiveCerrahi": "Gastroenteroloji Cerrahisi",
-            "Gastroenteroloji": "Gastroenteroloji",
-            "GenelCerrahi": "Genel Cerrahi",
-            "GogusHastaliklari": "Göğüs Hastalıkları",
-            "HematolojiOnkoloji": "Hematoloji ve Onkoloji",
-            "IcHastaliklari": "İç Hastalıkları",
-            "IsveHastaliklari": "İş ve Meslek Hastalıkları",
-            "KadinHastaliklari": "Kadın Hastalıkları ve Doğum",
-            "KalpDamarCerrahisi": "Kalp ve Damar Cerrahisi",
-            "Kardiyoloji": "Kardiyoloji",
-            "KulakBurunBogaz": "Kulak Burun Boğaz Hastalıkları",
-            "Nefroloji": "Nefroloji",
-            "Noroloji": "Nöroloji",
-            "NukleerTip": "Nükleer Tıp",
-            "OrtopediTravmatoloji": "Ortopedi ve Travmatoloji",
-            "Patoloji": "Patoloji",
-            "PlastikCerrahi": "Plastik, Rekonstrüktif ve Estetik Cerrahi",
-            "Psikiyatri": "Psikiyatri",
-            "Radyasyon": "Radyasyon Onkolojisi",
-            "Radyoloji": "Radyoloji",
-            "Romatoloji": "Romatoloji",
-            "TibbiLaboratuvar": "Tıbbi Laboratuvar",
-            "Uroloji": "Üroloji",
-            "CocukSagligi": "Çocuk Sağlığı ve Hastalıkları"
+            "Allgemeinmedizin": "Aile Hekimliği",
+            "Anästhesiologie": "Anesteziyoloji",
+            "Arbeitsmedizin": "İş ve Meslek Hastalıkları",
+            "Augenheilkunde": "Göz Hastalıkları",
+            "Chirurgie": "Genel Cerrahi",
+            "Dermatologie": "Dermatoloji ve Zührevi Hastalıklar",
+            "Endokrinologie": "Endokrinoloji, Diyabet ve Metabolizma Hastalıkları",
+            "Frauenheilkunde": "Kadın Hastalıkları ve Doğum",
+            "Gastroenterologie": "Gastroenteroloji",
+            "Gefäßchirurgie": "Kalp ve Damar Cerrahisi",
+            "HNO": "Kulak Burun Boğaz Hastalıkları",
+            "Hämatologie": "Hematoloji ve Onkoloji",
+            "Infektiologie": "Enfeksiyon Hastalıkları",
+            "InnereMedizin": "İç Hastalıkları",
+            "Kardiologie": "Kardiyoloji",
+            "KieferChirurgie": "Ağız, Diş ve Çene Cerrahisi",
+            "Kinderheilkunde": "Çocuk Sağlığı ve Hastalıkları",
+            "Labormedizin": "Tıbbi Laboratuvar",
+            "Nephrologie": "Nefroloji",
+            "Neurologie": "Nöroloji",
+            "Notfallmedizin": "Acil Tıp",
+            "Nuklearmedizin": "Nükleer Tıp",
+            "Orthopädie": "Ortopedi ve Travmatoloji",
+            "Pathologie": "Patoloji",
+            "PlastischeChirurgie": "Plastik, Rekonstrüktif ve Estetik Cerrahi",
+            "Pneumologie": "Göğüs Hastalıkları",
+            "Psychiatrie": "Psikiyatri",
+            "Radiologie": "Radyoloji",
+            "Rechtsmedizin": "Adli Tıp",
+            "Rheumatologie": "Romatoloji",
+            "Strahlentherapie": "Radyasyon Onkolojisi",
+            "Urologie": "Üroloji",
+            "Viszeralchirurgie": "Gastroenteroloji Cerrahisi",
+            "Zahnmedizin": "Diş Hekimliği"
         },
         "female": {
-            "Acil": "Acil Tıp",
-            "AdliTip": "Adli Tıp",
-            "AgizDis": "Ağız, Diş ve Çene Cerrahisi",
-            "AileHekimligi": "Aile Hekimliği",
-            "AnesteziyolojiReanimasyon": "Anesteziyoloji ve Reanimasyon",
-            "Dermatoloji": "Dermatoloji ve Zührevi Hastalıklar",
-            "DisHekimligi": "Diş Hekimliği",
-            "EndokrinolojiveDiyabet": "Endokrinoloji, Diyabet ve Metabolizma Hastalıkları",
-            "EnfeksiyonHastaliklari": "Enfeksiyon Hastalıkları",
-            "FizikselTipRehabilitasyon": "Fiziksel Tıp ve Rehabilitasyon",
-            "GastroenterolojiveCerrahi": "Gastroenteroloji Cerrahisi",
-            "Gastroenteroloji": "Gastroenteroloji",
-            "GenelCerrahi": "Genel Cerrahi",
-            "GogusHastaliklari": "Göğüs Hastalıkları",
-            "HematolojiOnkoloji": "Hematoloji ve Onkoloji",
-            "IcHastaliklari": "İç Hastalıkları",
-            "IsveHastaliklari": "İş ve Meslek Hastalıkları",
-            "KadinHastaliklari": "Kadın Hastalıkları ve Doğum",
-            "KalpDamarCerrahisi": "Kalp ve Damar Cerrahisi",
-            "Kardiyoloji": "Kardiyoloji",
-            "KulakBurunBogaz": "Kulak Burun Boğaz Hastalıkları",
-            "Nefroloji": "Nefroloji",
-            "Noroloji": "Nöroloji",
-            "NukleerTip": "Nükleer Tıp",
-            "OrtopediTravmatoloji": "Ortopedi ve Travmatoloji",
-            "Patoloji": "Patoloji",
-            "PlastikCerrahi": "Plastik, Rekonstrüktif ve Estetik Cerrahi",
-            "Psikiyatri": "Psikiyatri",
-            "Radyasyon": "Radyasyon Onkolojisi",
-            "Radyoloji": "Radyoloji",
-            "Romatoloji": "Romatoloji",
-            "TibbiLaboratuvar": "Tıbbi Laboratuvar",
-            "Uroloji": "Üroloji",
-            "CocukSagligi": "Çocuk Sağlığı ve Hastalıkları"
+            "Allgemeinmedizin": "Aile Hekimliği",
+            "Anästhesiologie": "Anesteziyoloji",
+            "Arbeitsmedizin": "İş ve Meslek Hastalıkları",
+            "Augenheilkunde": "Göz Hastalıkları",
+            "Chirurgie": "Genel Cerrahi",
+            "Dermatologie": "Dermatoloji ve Zührevi Hastalıklar",
+            "Endokrinologie": "Endokrinoloji, Diyabet ve Metabolizma Hastalıkları",
+            "Frauenheilkunde": "Kadın Hastalıkları ve Doğum",
+            "Gastroenterologie": "Gastroenteroloji",
+            "Gefäßchirurgie": "Kalp ve Damar Cerrahisi",
+            "HNO": "Kulak Burun Boğaz Hastalıkları",
+            "Hämatologie": "Hematoloji ve Onkoloji",
+            "Infektiologie": "Enfeksiyon Hastalıkları",
+            "InnereMedizin": "İç Hastalıkları",
+            "Kardiologie": "Kardiyoloji",
+            "KieferChirurgie": "Ağız, Diş ve Çene Cerrahisi",
+            "Kinderheilkunde": "Çocuk Sağlığı ve Hastalıkları",
+            "Labormedizin": "Tıbbi Laboratuvar",
+            "Nephrologie": "Nefroloji",
+            "Neurologie": "Nöroloji",
+            "Notfallmedizin": "Acil Tıp",
+            "Nuklearmedizin": "Nükleer Tıp",
+            "Orthopädie": "Ortopedi ve Travmatoloji",
+            "Pathologie": "Patoloji",
+            "PlastischeChirurgie": "Plastik, Rekonstrüktif ve Estetik Cerrahi",
+            "Pneumologie": "Göğüs Hastalıkları",
+            "Psychiatrie": "Psikiyatri",
+            "Radiologie": "Radyoloji",
+            "Rechtsmedizin": "Adli Tıp",
+            "Rheumatologie": "Romatoloji",
+            "Strahlentherapie": "Radyasyon Onkolojisi",
+            "Urologie": "Üroloji",
+            "Viszeralchirurgie": "Gastroenteroloji Cerrahisi",
+            "Zahnmedizin": "Diş Hekimliği"
         }
     }
-} 
+}
