--- a/locales/tr.json
+++ b/locales/tr.json
@@ -42,7 +42,7 @@
         "additionalInfo": "Ek Bilgiler",
         "location": "Konum",
         "clickMapForDirections": "Yol tarifi için haritaya tıklayın",
-        "gallery": "Ordination Fotoğrafları",
+        "gallery": "Fotograf galerisi",
         "noAddress": "Adres bilgisi mevcut değil",
         "addressNotFound": "Adres haritada bulunamadı",
         "routePlanning": "Yol tarifi başlat"
